fix height on mobile & input focus on sent

--- a/public/input.css
+++ b/public/input.css
@@ -35,6 +35,12 @@
   border-radius: 100vw;
 }
 
+.full-screen {
+  min-height: -moz-available;
+  min-height: -webkit-fill-available;
+  min-height: fill-available;
+}
+
 @media only screen and (max-width: 640px) {
   ::-webkit-scrollbar {
     width: 0;
